--- a/gb/23/2/3/n13921661.md
+++ b/gb/23/2/3/n13921661.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>“世界需要真善忍” 神韵圣多明哥首演爆满</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>“世界需要真善忍” 神韵多米尼加首演爆满</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13921665-230203023822100615-600x400.jpg" />
 <h6>2023年2月2日晚，在首都圣多明哥的埃杜阿多-布里托国家剧院卡洛斯-皮安蒂尼厅，神韵巡回艺术团在当地的首场演出的门票全部售罄。（新唐人电视台）
 </h6>
 <hr>
 	<p>【大纪元2023年02月03日讯】（大纪元记者林南宇多米尼加圣多明哥报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>首次莅临多米尼加共和国，在当地引起轰动。首场演出的门票全部售罄。主办方临时加座，也被一抢而空。</p>
-<p>2023年2月2日晚，在首都圣多明哥的埃杜阿多-布里托国家剧院卡洛斯-皮安蒂尼厅（Eduardo Brito National Theater Carlos Piantini Hall），<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>巡回艺术团首场演出吸引了当地主流社会各界精英。人人盛装华服，专注投入地观赏一场等待已久的演出。</p>
-<figure id="attachment_13921668" aria-describedby="caption-attachment-13921668" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13921668-230203015434100615.jpg"><img class="size-large wp-image-13921668" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13921668-230203015434100615-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13921668" class="wp-caption-text">2023年2月2日晚，在首都圣多明哥的埃杜阿多-布里托国家剧院卡洛斯-皮安蒂尼厅，神韵巡回艺术团的首场演出，吸引了当地主流社会各界精英。（林南宇／大纪元）</figcaption></figure>
+<p>2023年2月2日晚，在首都圣多明哥的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9F%83%E6%9D%9C%E9%98%BF%E5%A4%9A-%E5%B8%83%E9%87%8C%E6%89%98%E5%9B%BD%E5%AE%B6%E5%89%A7%E9%99%A2%E5%8D%A1%E6%B4%9B%E6%96%AF-%E7%9A%AE%E5%AE%89%E8%92%82%E5%B0%BC%E5%8E%85.md#1">埃杜阿多-布里托国家剧院卡洛斯-皮安蒂尼厅</a>（Eduardo Brito National Theater Carlos Piantini Hall），<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>巡回艺术团首场演出吸引了当地主流社会各界精英。人人盛装华服，专注投入地观赏一场等待已久的演出。</p>
+<figure id="attachment_13921668" aria-describedby="caption-attachment-13921668" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13921668-230203015434100615.jpg"><img class="size-large wp-image-13921668" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13921668-230203015434100615-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13921668" class="wp-caption-text">2023年2月2日晚，在首都圣多明哥的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9F%83%E6%9D%9C%E9%98%BF%E5%A4%9A-%E5%B8%83%E9%87%8C%E6%89%98%E5%9B%BD%E5%AE%B6%E5%89%A7%E9%99%A2%E5%8D%A1%E6%B4%9B%E6%96%AF-%E7%9A%AE%E5%AE%89%E8%92%82%E5%B0%BC%E5%8E%85.md#1">埃杜阿多-布里托国家剧院卡洛斯-皮安蒂尼厅</a>，神韵巡回艺术团的首场演出，吸引了当地主流社会各界精英。（林南宇／大纪元）</figcaption></figure>
 <p>首次观看神韵演出，神韵的舞蹈、色彩、现场乐团伴奏、高科技天幕以及独唱独奏，把观众们迷住了。观众席上不时传来赞叹声、掌声，现场气氛非常热烈。</p>
 <p>埃杜阿多-布里托国家剧院总监为该剧院迎来神韵而感到荣幸。他说，“非常荣幸，这场演出是在我出任总监的时候上演，因为本剧院永远对那些用艺术讲述事实真相的人敞开大门。”</p>
 <p>前能源与矿业部长Pelegrin Castillo表示，演出精彩绝伦，还传递了一个必不可少的信息，当今的世界需要“真、善、忍”。前高等教育、科学与技术部（MESCYT）的内阁主管Pedro A. Eduardo表示，神韵传递了伟大的价值观。</p>
 <h2>前能源与矿业部长：当今世界需要“真、善、忍”信息</h2>
 <figure id="attachment_13921670" aria-describedby="caption-attachment-13921670" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13921670-2302030001442124.jpg"><img class="size-large wp-image-13921670" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13921670-2302030001442124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13921670" class="wp-caption-text">2023年2月2日晚，多米尼加共和国前能源与矿业部长、前国会议员、党派领袖Pelegrin Castillo在圣多明哥埃杜阿多-布里托国家剧院卡洛斯-皮安蒂尼厅，观赏了神韵巡回艺术团在多米尼加共和国的首场演出。（新唐人电视台）</figcaption></figure>
-<p>前能源与矿业部长、党派领袖Pelegrin Castillo表示：“演出精彩绝伦，还传递了一个必不可少的信息——这个世界上还有专制政权在如此严酷的压迫人民。我一直很钦佩伟大的中国人民，我在了解、也一直在追随<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md#1">中华文化</a>，但能有机会观赏到如此精湛优雅、美不胜收的演出，而且（演出）卓越不凡地展现出多姿多采的传统文化和人文特色，让观众感受到超越凡尘的美，所有这些，都是令我从中获得满足的缘由。”</p>
+<p>前能源与矿业部长、党派领袖Pelegrin Castillo表示：“演出精彩绝伦，还传递了一个必不可少的信息——这个世界上还有专制政权在如此严酷地压迫人民。我一直很钦佩伟大的中国人民，我在了解、也一直在追随<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E6%96%87%E5%8C%96.md#1">中华文化</a>，但能有机会观赏到如此精湛优雅、美不胜收的演出，而且（演出）卓越不凡地展现出多姿多彩的传统文化和人文特色，让观众感受到超越凡尘的美，所有这些，都是令我从中获得满足的缘由。”</p>
 <p>他认为，神韵艺术家复兴传统文化非常重要，“因为艺术、文化，是人类灵魂的最高级表达方式。这与一个民族的特性有很大关系。一个民族要想立足于世界，（神韵展示的）中国为世界做出了榜样。正是（神韵）这样通过保存民族的特性，在时代的变迁中，中华民族祖先（创立的传统文化）、生活智慧没有被遗忘，（将历朝历代的故事）融合之后再现舞台上，以期未来更美好。”</p>
-<p>他还表示，真、善、忍的信息，对当今的世界来说是“必需的”。</p>
+<p>他还表示，“真、善、忍”的信息，对当今的世界来说是“必需的”。</p>
 <h2>政府MESCYT部前内阁主管赞神韵展示伟大价值观</h2>
 <figure id="attachment_13921673" aria-describedby="caption-attachment-13921673" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13921673-2302022357052124.jpg"><img class="size-large wp-image-13921673" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13921673-2302022357052124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13921673" class="wp-caption-text">2023年2月2日晚，在多米尼加圣多明哥埃杜阿多-布里托国家剧院卡洛斯-皮安蒂尼厅，前MESCYT内阁主管、哲学教授Pedro A. Eduardo观看了神韵巡回艺术团的首场演出。（林南宇／大纪元）</figcaption></figure>
 <p>“演出超凡脱俗，独一无二，特别是她有传递给社会的信息。”Pedro A. Eduardo首观神韵，称赞神韵展示了“伟大的价值观”。</p>
@@ -54,33 +54,33 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11477432.md#1" target="_blank">共产暴政录：李大钊被绞死的真正原因</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555095.md#1" target="_blank">这条命是法轮功给的</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/4/n10761251.md#1" target="_blank">谭松：对大地主刘文彩庄园的采访</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913681.md#1">凡尘中人有仙缘 偶遇修道人出神通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920654.md#1">音乐才子曾患白肺命危 默念九个字起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920969.md#1">【十字路口】胡鑫宇案八大疑点 美军奇招围战狼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920312.md#1">【菁英论坛】美中对抗升级 法拉盛血旗消失</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920383.md#1">【探索时分】台湾为什么购买火山布雷系统</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919422.md#1">美驻华大使馆推出贴图“鹰小美”引网友联想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918681.md#1">吴人晓：胡鑫宇案为何令人联想到谷开来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919336.md#1">分析：中共陷多事之秋 习近平新班底只能死撑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919533.md#1">40岁胡歌官宣已婚得女 透露妻子非公众人物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918977.md#1">梁朝伟高调进驻抖音 网友喊他千万别做一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919634.md#1">不怕变“胖冰” 范冰冰过年到京城街头享美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13919017.md#1">终于完成18次抗癌治疗 朱芯仪直呼想哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920411.md#1">胡歌秘婚当爸话题延烧 彭于晏意外登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914714.md#1">护心护肝又护肾 这种天然饮料有神奇功效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919945.md#1">美国富翁透露 有钱人如何用钱的8个秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918809.md#1">增强人体免疫力的9种自然方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918579.md#1">你辗转难眠吗？ 试试专家分享的6个助眠方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/25/n13891656.md#1">上网轻松赚外快 利用10个免费网站兼差</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/3/n13921661.htm">“世界需要真善忍” 神韵圣多明哥首演爆满</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/3/n13921661.htm">“世界需要真善忍” 神韵多米尼加首演爆满</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921661.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
